--- a/templates/post.html
+++ b/templates/post.html
@@ -4,50 +4,16 @@
 {% block title %} Home {% endblock %}
 
 {% block content %}
+{% if user.is_authenticated %}
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <br><br>
-                <div class="card">
-                    <div class="card-header">
-                        <h3 class="text-center"> Cauta </h3>
-                    </div>
-                    <form method="post">
-                        {% csrf_token %}
-                        <div class="card-body">
-                            {{ form.as_p }}
-                        </div>
-                    </form>
-                    <div class="card-footer text-center">
-                        <button class="btn btn-success" type="submit">Search</button>
-                    </div>
-                </div>
+
             </div>
         </div>
-        <br>
-        <div class="row">
-            <div class="col-md-8 offset-md-2">
-                {% for anunt in 4_tl%}
-                    <div class="col-md-3 ">
-                        <br>
-                        <div class="card" style="width: 18rem;">
-                            {% if anunt.poze %}
-                                <img src="{{ anunt.poze.url }}" class="card-img-top" alt="...">
-                            {% else %}
-                                <img src="{% static 'images/no_image_available.png' %}" class="card-img-top" alt="...">
-                            {% endif %}
-                            <div class="card-body">
-                                <h5 class="card-title">{{ anunt.titul_anunt }}</h5>
-                                <p class="card-text">Suprafata utila: {{ anunt.suprafata_utila }} mp</p>
-                                <p class="card-text">Pret: {{ anunt.pret }} euro</p>
-                                <p class="card-text">Localitatea: {{ anunt.localizare }}</p>
-                                <p class="card-text">Descriere: {{ anunt.descriere }}</p>
-                                <p class="card-text">Metoda Achizitie: {{ anunt.tip_vanzare }}</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
-        </div>
+{% else %}
+    <br>
+    <p class="text-center"><a href="{% url 'login' %}"> Intra in cont pentru a vedea anuntul </a></p>
+{% endif %}
 {% endblock %}
