--- a/templates/post.html
+++ b/templates/post.html
@@ -1,63 +1,41 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block title %} Anunt {% endblock %}
-
 {% block content %}
     {% if user.is_authenticated %}
-        <div class="container-fluid">
-        {% for anunt in all_announce %}
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <br><br>
-            <div class="card">
-                <h5 class="card-title">{{ anunt.titul_anunt }}</h5>
-                {% if anunt.poze %}
-                <div id="carouselExampleIndicators" class="carousel slide">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="{{ anunt.poze.url }}" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="{{ anunt.poze.url }}" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="{{ anunt.poze.url }}" class="d-block w-100" alt="...">
-                        </div>
-                    </div>
-                {% else %}
-                    <img src="{% static 'images/no_image_available.png' %}" class="card-img-top" alt="...">
-                {% endif %}
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-                </div>
-                <br><br>
-                <div class="card-body">
-                <h5>Descriere</h5>
-                <p class="card-text">{{ anunt.descriere }}</p>
-                </div>
+        <br>
+        <div class="container">
+            <div>
+                <h5>{{ post.titul_anunt }}</h5>
             </div>
-        {% endfor %}
+            <div>
+                <h5>{{ post.pret }} EURO</h5>
+            </div>
         </div>
-    </div>
+        <div class="container-fluid">
+        <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <br><br>
+            {% if post.poze %}
+                <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="{{ post.poze.url }}" class="d-block w-60" alt="...">
+                    </div>
+                </div>
+            {% else %}
+                <img src="{% static 'images/no_image_available.png' %}" class="card-img-top" alt="...">
+            {% endif %}
+            <br><br>
+            <div class="card-body">
+                <h5>Descriere</h5>
+                <p class="card-text">{{ post.descriere }}</p>
+            </div>
+            </div>
+        </div>
     {% else %}
-    <br>
-    <p class="text-center"><a href="{% url 'login' %}"> Intra in cont pentru a vedea anuntul </a></p>
+        <br>
+        <p class="text-center"><a href="{% url 'login' %}"> Intra in cont pentru a vedea anuntul </a></p>
     {% endif %}
+<br><br>
 {% endblock %}
