--- a/templates/post.html
+++ b/templates/post.html
@@ -36,7 +36,7 @@
                         <table class="table table-hover">
                             <tr>
                                 <td>Nr. carte funciara: {{ post.numar_carte_funciara }}</td>
-                                <td>Suprafata utila: {{ post.suprafata_utila }}</td>
+                                <td>Suprafata utila: {{ post.suprafata_utila }} mp</td>
                             </tr>
                         </table>
                     </div>
